Update to Chapter 6

--- a/source/Eliza/Eliza.tex
+++ b/source/Eliza/Eliza.tex
@@ -6,7 +6,7 @@
 
 \chapter{Eliza}
 
-The people mover was big, with stacks of bunks in the back and two toilets. The driver was a twenty-something coadjutor. Her taupe robes had a thin black stipe at the bottom of the sleeves and her head was shaved smooth. We obediently filed in and took seats near the front as she directed.
+The people mover was big, with stacks of bunks three high in the back and two toilets. The driver was a twenty-something coadjutor. Her taupe robes had a thin black stipe at the bottom of the sleeves and her head was shaved smooth. We obediently filed in and took seats near the front as she directed.
 
 ``Hello everyone'', said the driver. ``My name is Pilar and like you I come from the dunbars near here. I was collected just over fifteen years ago.''
 
@@ -70,20 +70,52 @@ Pilar was silent for a moment. ``Let's have short break. When we start again, I'
 
 ``Pardon me, Pilar", said a beefy boy near the back. ``Where are we going, exactly?''
 
-``Exactly where is not something you need to know, especially since you won't recognise the name and can't look it up right now. I am taking you to another transport. Eventually you will be going to Eliza's headquarters to start your temple education.''
+``Exactly where is not something you need to know, especially since you won't recognise the name and can't look it up right now. I am taking you to another transport. Eventually you will be going to Eliza Central to start your temple education.''
 
 ``How does that work?'' asked the boy.
 
 ``Let's have that break now. Everything will become clear in time.''
 
+Eliza Central. Whoa. I thought we were just going to the local Sanctuary. A few of the children looked at each other, eyes wide.
+
 There was a general shifting around as some of the kids made their way to the toilets. One even laid down in a bunk, probably a bit sick from the unusual movement of the people mover. It tended to sway side to side much more than a harvester.
 
 Pilar let plenty of time pass. Without our slates, nobody knew what to do with our free time. We couldn't play games, read, or look up any answers to the million questions running through our heads. Once everyone was through the toilets, Pilar walked back to the boy in the bunk and gave him a pill and a glass of water. She took out meal boxes from a compartment in the back and asked Elisa to help her pass them out. Elisa looked thrilled to have something to do.
 
+I overheard Pilar ask Elisa, ``How did you come by your name, Elisa?''. She must have noticed the linguistic similarity to the name of the mother church and assumed her parents had too.
+
+Elisa muttered softly, ``It doesn't have anything to do with Eliza, if that's what you mean. It is just Lisa with an E on the front. My mum told me it is a traditional northern Italian name.''
+
+Pilar nodded and let it go. Eliza was certainly pronounced differently, with its long eye and hard zed, so there needn't be any confusion unless someone were to write it. She made a mental note to be careful with her notes.
+
+While we ate, Pilar resumed her questioning, insistently trying to drag us into dialog with her, one at a time. Maybe she was going to eat later, maybe she ate earlier. I never saw her eat, at any rate.
+
+``Who knows how Eliza began?'', she started. She looked at Elisa rather pointedly. Elisa was the oldest and was going to be treated like it.
+
+Elisa squirmed in her seat. She didn't like being challenged, especially so quickly after last time.
+
+``It was after the Fall of the Corporations, sometime after all the online services were destroyed.''
+
+``What caused that?''
+
+``There was a big, umm, solar flare that killed the satellites and the big server farms. Some kind of electro, electro...''
+
+``Electromagnetic pulse'', chipped in the beefy kid in the back. 
+
+``That's right, Alejandro. Very good. Now, do you know what an electromagnetic pulse is and why it damaged the computers?''
+
+No one spoke up. I thought it had something to do with huge power spikes of a size that hadn't been designed for, but I didn't really understand the cause and effect. Better to sit this one out.
+
+After an embarrassed silence, Pilar said, ``How many of you have studied Maxwell's equations?'' Another boy and I raised our hands. I looked at him and he looked back at me. His closed lips turned up in a small smile. I resolved to speak with him later.
+
+``Well, let's not get into the details of that now. Sergio and Aapo, you can look up the details when you reach Eliza Central. For now, it is enough for you to understand that a large solar storm caused a flare that was aimed directly at Earth. The scientists of the time failed to predict just how devastating it would be. By the time they determined that the flare was going to hit Earth, there was not enough time to turn off all the electronics. Nearly everything electronic that was turned on was physically damaged. Because the Americas, Europe and Africa were on the side facing the sun at the time, we copped the worst of it. The corporations collapsed in the riots that followed.''
+
+
+
 TODO:
 
 \begin{itemize}
-\item Describe the church and how it came to be.
+\item Describe Eliza and how it came to be.
 \item Discussion between senior members regarding the new cohort? (Show, don't tell)
 \item Model the senior leadership of Eliza like in Plato's Republic. This includes relationships to children, foreign policy.
 \item What happened to the nukes? Many degraded without maintenance to replace, some bought by Eliza/Garbi Elizondo.
